[workspace]
resolver = "2"
members = [
    "crates/skp-cache-core",
    "crates/skp-cache-storage",
    "crates/skp-cache",
    "crates/skp-cache-http",
    "crates/skp-cache-axum",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Setu Labs"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/setulabs/skp-cache"
keywords = ["cache", "redis", "async", "caching"]
categories = ["caching", "asynchronous"]

[workspace.dependencies]
# Core dependencies (latest versions as of Jan 2026)
async-trait = "0.1.89"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Optional serializers
rmp-serde = "1.3.1"
bincode = "1.3"

# Memory backend
dashmap = "6.1.0"
parking_lot = "0.12.5"

# Async runtime
tokio = { version = "1.49.0", features = ["sync", "time", "rt"] }

# Utilities
rand = "0.9.2"

# Redis backend
redis = { version = "1.0.2", features = ["tokio-comp", "connection-manager"] }
bb8 = "0.9.1"
bb8-redis = "0.26.0"

# Metrics
metrics = "0.24.3"

# Testing
tokio-test = "0.4.5"

# Internal crates
skp-cache-core = { path = "crates/skp-cache-core" }
skp-cache-storage = { path = "crates/skp-cache-storage" }
skp-cache-http = { path = "crates/skp-cache-http" }
skp-cache-axum = { path = "crates/skp-cache-axum" }
skp-cache = { path = "crates/skp-cache" }
