[package]
name = "skp-cache-axum"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Axum caching middleware for skp-cache"

[dependencies]
axum = "0.7"
tower = "0.4"
tower-service = "0.3"
futures-util = "0.3"
http = "1.0"
http-body = "1.0"
bytes = "1.0"
tokio = { workspace = true }

# Workspace dependencies
skp-cache = { workspace = true }
skp-cache-core = { workspace = true }
skp-cache-http = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
