[package]
name = "skp-cache-axum"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Axum caching middleware for skp-cache"

[dependencies]
axum = "0.8.8"
tower = "0.5.3"
tower-service = "0.3.3"
futures-util = "0.3.31"
http = "1.4.0"
http-body = "1.0.1"
bytes = "1.11.0"
tokio = { workspace = true }

# Workspace dependencies
skp-cache = { workspace = true }
skp-cache-core = { workspace = true }
skp-cache-http = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
