[package]
name = "skp-cache-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core traits and types for skp-cache"
keywords = ["cache", "traits", "core"]
categories = ["caching"]

[features]
default = ["json"]
json = ["serde_json"]
msgpack = ["rmp-serde"]
bincode = ["dep:bincode"]
metrics = ["dep:metrics"]
compression = ["dep:zstd"]

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json = { workspace = true, optional = true }
rmp-serde = { workspace = true, optional = true }
bincode = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }
zstd = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
criterion = "0.8.1"

[[bench]]
name = "serialization"
harness = false
