[package]
name = "skp-cache-http"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP caching primitives for skp-cache"

[dependencies]
http = "1.0"
serde = { workspace = true }
skp-cache-core = { workspace = true }
headers = { version = "0.4", optional = true }

[dev-dependencies]
tokio = { workspace = true }
