[package]
name = "skp-cache-http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "HTTP caching primitives for skp-cache"
keywords = ["cache", "http", "caching"]
categories = ["caching", "web-programming"]

[dependencies]
http = "1.0"
serde = { workspace = true }
skp-cache-core.workspace = true
headers = { version = "0.4", optional = true }

[dev-dependencies]
tokio = { workspace = true }
