[package]
name = "skp-cache-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Storage backends for skp-cache"
keywords = ["cache", "storage", "memory", "redis"]
categories = ["caching"]

[features]
default = ["memory"]
memory = ["dashmap", "parking_lot"]

[dependencies]
skp-cache-core.workspace = true
async-trait.workspace = true
tokio.workspace = true

# Memory backend
dashmap = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "time"] }
