[package]
name = "skp-cache-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Storage backends for skp-cache"
keywords = ["cache", "storage", "memory", "redis"]
categories = ["caching"]

[features]
default = ["memory"]
memory = ["dashmap", "parking_lot"]
redis = ["dep:redis", "dep:bb8", "dep:bb8-redis"]
multitier = []

[dependencies]
skp-cache-core.workspace = true
async-trait.workspace = true
tokio.workspace = true

# Memory backend
dashmap = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }

# Redis backend
redis = { workspace = true, optional = true }
bb8 = { workspace = true, optional = true }
bb8-redis = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "time"] }
